exports[`test Child nodes 1`] = `
"<div class=\"pe-list pe-list--padding\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Dark tone class + light tone 1`] = `
"<div style=\"background: rgb(255, 255, 255);\" class=
\"pe-list pe-list--header pe-list--padding pe-light-tone\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Dark tone class + light tone class 1`] = `
"<div style=\"background: rgb(255, 255, 255);\" class=
\"pe-list pe-list--header pe-list--padding pe-light-tone\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Keyboard control: click to select, then use the arrow keys (Escape to deselect) 1`] = `
"<div>
  <div class=\"pe-list pe-list--borders pe-list--padding\">
    <div class=\"pe-list-tile pe-list-tile--header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            A
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Amman
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Amsterdam
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Athens
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            B
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Bangkok
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Beijing
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Brussels
          </div>
        </div>
      </div>
    </div>
    <div class=\"pe-list-tile pe-list-tile--header\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            C
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Canberra
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Cardiff
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable tests-list-keyboard-list-tile\"
    tabindex=\"0\">
      <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Copenhagen
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test No list padding 1`] = `
"<div class=\"pe-list\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test No options 1`] = `
"<div class=\"pe-list pe-list--padding\"></div>
"
`;

exports[`test Option: class -- dark tone class 1`] = `
"<div class=\"pe-list pe-list--header pe-list--padding\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: class 1`] = `
"<div class=\"pe-list pe-list--padding class-x\"></div>
"
`;

exports[`test Option: className 1`] = `
"<div class=\"pe-list pe-list--padding className-x\"></div>
"
`;

exports[`test Option: compact 1`] = `
"<div class=
\"pe-list pe-list--header pe-list--compact pe-list--padding\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: element 1`] = `
"<a class=\"pe-list pe-list--padding\"></a>
"
`;

exports[`test Option: id 1`] = `
"<div id=\"id-x\" class=\"pe-list pe-list--padding\"></div>
"
`;

exports[`test Option: navigation 1`] = `
"<div class=\"pe-list pe-list--compact pe-list--padding\">
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-list-navigation-list\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--regular\">
          <div class=\"pe-svg\">
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\" focusable=\"false\">
              <path d=
              \"M19 3H4.99c-1.11 0-1.98.89-1.98 2L3 19c0 1.1.88 2 1.99 2H19c1.1 0 2-.9 2-2V5c0-1.11-.9-2-2-2zm0 12h-4c0 1.66-1.35 3-3 3s-3-1.34-3-3H4.99V5H19v10z\">
              </path>
            </svg>
          </div>
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Inbox
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-list-navigation-list\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--regular\">
          <div class=\"pe-svg\">
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\" focusable=\"false\">
              <path d=
              \"M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z\">
              </path>
            </svg>
          </div>
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Starred
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-list-navigation-list\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--regular\">
          <div class=\"pe-svg\">
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\" focusable=\"false\">
              <path d=
              \"M2.01 21L23 12 2.01 3 2 10l15 2-15 2z\"></path>
            </svg>
          </div>
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Sent mail
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--navigation pe-list-tile--front tests-list-navigation-list\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--regular\">
          <div class=\"pe-svg\">
            <svg xmlns=\"http://www.w3.org/2000/svg\" width=\"24\"
            height=\"24\" viewbox=\"0 0 24 24\" focusable=\"false\">
              <path d=
              \"M21.99 8c0-.72-.37-1.35-.94-1.7L12 1 2.95 6.3C2.38 6.65 2 7.28 2 8v10c0 1.1.9 2 2 2h16c1.1 0 2-.9 2-2l-.01-10zM12 13L3.74 7.84 12 3l8.26 4.84L12 13z\">
              </path>
            </svg>
          </div>
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Drafts
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: style (colors) 1`] = `
"<div style=
\"background-color: rgb(239, 108, 0); color: rgb(255, 255, 255);\"
class=\"pe-list pe-list--header pe-list--padding\">
  <div style=\"color: rgba(255, 255, 255, 0.8);\" class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgba(255, 255, 255, 0.8);\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div style=\"color: rgb(255, 255, 255);\" class=\"pe-list-tile\"
  tabindex=\"0\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgb(255, 255, 255);\">
        <div class=\"pe-list-tile__title\">
          One
        </div>
      </div>
    </div>
  </div>
  <div style=\"color: rgb(255, 255, 255);\" class=\"pe-list-tile\"
  tabindex=\"0\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgb(255, 255, 255);\">
        <div class=\"pe-list-tile__title\">
          Two
        </div>
      </div>
    </div>
  </div>
  <div style=\"color: rgb(255, 255, 255);\" class=\"pe-list-tile\"
  tabindex=\"0\">
    <div style=\"\" class=\"pe-list-tile__primary\">
      <div class=\"pe-list-tile__content\" style=
      \"color: rgb(255, 255, 255);\">
        <div class=\"pe-list-tile__title\">
          Three
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Option: tiles 1`] = `
"<div class=\"pe-list pe-list--padding\">
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Options: header, tiles with urls 1`] = `
"<div class=
\"pe-list pe-list--borders pe-list--header pe-list--padding\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Grace VanDam
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Binge watching...
      </div>
    </div></a>
  </div>
</div>
<div class=
\"pe-list pe-list--borders pe-list--header pe-list--padding\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Grace VanDam
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Binge watching...
      </div>
    </div></a>
  </div>
</div>
"
`;

exports[`test Options: header, tiles with urls, secondary 1`] = `
"<div class=
\"pe-list pe-list--borders pe-list--header pe-list--padding\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a><a href=\"#!/#secondary\" class=
    \"pe-list-tile__secondary\" tabindex=\"0\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a><a href=\"#!/#secondary\" class=
    \"pe-list-tile__secondary\" tabindex=\"0\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Grace VanDam
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Binge watching...
      </div>
    </div></a><a href=\"#!/#secondary\" class=
    \"pe-list-tile__secondary\" tabindex=\"0\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div></a>
  </div>
</div>
<div class=
\"pe-list pe-list--borders pe-list--header pe-list--padding\">
  <div class=
  \"pe-list-tile pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Jennifer Barker
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Starting post doc
      </div>
    </div></a><a href=\"#!/#secondary\" class=
    \"pe-list-tile__secondary\" tabindex=\"0\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Ali Connors
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Brunch this weekend?
      </div>
    </div></a><a href=\"#!/#secondary\" class=
    \"pe-list-tile__secondary\" tabindex=\"0\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div></a>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
    <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
    \"#!/#primary\">
    <div class=\"pe-list-tile__content pe-list-tile__content-front\">
      <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
        <img src=
        \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
      </div>
    </div>
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-list-tile__title\">
        Grace VanDam
      </div>
      <div class=\"pe-list-tile__subtitle\">
        Binge watching...
      </div>
    </div></a><a href=\"#!/#secondary\" class=
    \"pe-list-tile__secondary\" tabindex=\"0\">
    <div class=\"pe-list-tile__content\">
      <div class=\"pe-icon pe-icon--medium\">
        <div class=\"pe-svg\">
          <svg width=\"24\" height=\"24\" viewbox=\"0 0 24 24\"
          focusable=\"false\">
            <path d=
            \"M11.99 2C6.47 2 2 6.48 2 12s4.47 10 9.99 10C17.52 22 22 17.52 22 12S17.52 2 11.99 2zm4.24 16L12 15.45 7.77 18l1.12-4.81-3.73-3.23 4.92-.42L12 5l1.92 4.53 4.92.42-3.73 3.23L16.23 18z\">
            </path>
          </svg>
        </div>
      </div>
    </div></a>
  </div>
</div>
"
`;

exports[`test Options: header, tiles, indent, indentedBorders 1`] = `
"<div class=
\"pe-list pe-list--indented-borders pe-list--header pe-list--padding\">
<div class=
\"pe-list-tile pe-list-tile--header pe-list-tile--front pe-list-tile--header\">
  <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Friends
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=\"pe-list-tile pe-list-tile--subtitle\" tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\"></div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Options: header.sticky 1`] = `
"<div class=\"scrollable-list\">
  <div class=\"pe-list pe-list--header pe-list--padding\">
    <div class=
    \"pe-list-tile pe-list-tile--sticky pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Sub header one
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header pe-list--padding\">
    <div class=
    \"pe-list-tile pe-list-tile--sticky pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Sub header two
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header pe-list--padding\">
    <div class=
    \"pe-list-tile pe-list-tile--sticky pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Sub header three
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header pe-list--padding\">
    <div class=
    \"pe-list-tile pe-list-tile--sticky pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Sub header four
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
  <div class=\"pe-list pe-list--header pe-list--padding\">
    <div class=
    \"pe-list-tile pe-list-tile--sticky pe-list-tile--header pe-list-tile--header\">
    <div class=\"pe-list-tile__primary\" style=\"\">
        <div class=\"pe-list-tile__content\">
          <div class=\"pe-list-tile__title\">
            Sub header five
          </div>
        </div>
      </div>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-1.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-2.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div></a>
    </div>
    <div class=
    \"pe-list-tile pe-list-tile--hoverable pe-list-tile--subtitle\">
      <a class=\"pe-list-tile__primary\" style=\"\" tabindex=\"0\" href=
      \"#!/#primary\">
      <div class=
      \"pe-list-tile__content pe-list-tile__content-front\">
        <div class=\"pe-icon pe-icon--large pe-icon--avatar\">
          <img src=
          \"http://arthurclemens.github.io/assets/polythene/examples/avatar-3.png\">
        </div>
      </div>
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div></a>
    </div>
  </div>
</div>
"
`;

exports[`test Themed list (colors and padding) -- dark tone class 1`] = `
"<div class=\"pe-list pe-list--padding tests-lists-themed-list\">
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;

exports[`test Themed list (colors and padding) 1`] = `
"<div class=\"pe-list pe-list--padding tests-lists-themed-list\">
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Jennifer Barker
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Starting post doc
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Ali Connors
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Brunch this weekend?
        </div>
      </div>
    </div>
  </div>
  <div class=
  \"pe-list-tile pe-list-tile--subtitle tests-lists-themed-list-tile\"
  tabindex=\"0\">
    <div class=\"pe-list-tile__primary\" style=\"\">
      <div class=\"pe-list-tile__content\">
        <div class=\"pe-list-tile__title\">
          Grace VanDam
        </div>
        <div class=\"pe-list-tile__subtitle\">
          Binge watching...
        </div>
      </div>
    </div>
  </div>
</div>
"
`;
